Remove unused user application entities