@@ -7,7 +7,6 @@ import jakarta.persistence.Id;
 import jakarta.persistence.JoinTable;
 import jakarta.persistence.ManyToMany;
 import jakarta.persistence.Table;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -23,8 +22,6 @@ public class GroupEntity {
     @JoinTable(name = "tblGroupUsers")
     private final Set<UserEntity> users = new HashSet<>();
 
-    private final Set<ClientAppEntity> accessibleClientApplications = new HashSet<>();
-
     private final Set<GroupEntity> parents = new HashSet<>();
 
     void addUserReference(UserEntity user) {
@@ -35,11 +32,7 @@ public class GroupEntity {
         users.remove(user);
     }
 
-    public Set<ClientAppEntity> getAccessibleClientApplications() {
-        return Collections.unmodifiableSet(accessibleClientApplications);
-    }
-
     public Set<GroupEntity> getAllParents() {
-        return Collections.unmodifiableSet(parents);
+        return Set.copyOf(parents);
     }
 }
